--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 
             //
 
-            createPanel();
 
 
             //
@@ -82,6 +81,16 @@
 
         } );
         }
+        function activateAllActions() {
+
+        actions.forEach( function ( action ) {
+
+            action.play();
+
+        } );
+
+        }
+
 
         function animate() {
 
